Update отчет о тестировании.md

--- a/отчет о тестировании.md
+++ b/отчет о тестировании.md
@@ -1,11 +1,11 @@
 # Отчет о тестировании сайта “Магазин кроссовок “Sneakers”.
-Дата: 29.08.2024 г.
-Автор: Елена Яценко
-Проект: “Магазин кроссовок “Sneakers” (это современная онлайн-платформа, посвященная продаже кроссовок и спортивной обуви. Помимо покупки обуви на сайте реализована система фильтров, позволяющая находить кроссовки по бреду, есть возможность почитать о трендах и новинках, оставить свой отзыв)
-Версия: 1.0.0
-Развертывание: Docker
-Приложение проверено на стенде: http://localhost:3000/
-Тестирование: Метод “черного” ящика
+- Дата: 29.08.2024 г.
+ - Автор: Елена Яценко
+- Проект: “Магазин кроссовок “Sneakers” (это современная онлайн-платформа, посвященная продаже кроссовок и спортивной обуви. Помимо покупки обуви на сайте реализована система фильтров, позволяющая находить кроссовки по бреду, есть возможность почитать о трендах и новинках, оставить свой отзыв)
+- Версия: 1.0.0
+- Развертывание: Docker
+- Приложение проверено на стенде: http://localhost:3000/
+- Тестирование: Метод “черного” ящика
 ## Поставленные цели
 - Определить существующую информацию о проекте и программных  компонентах, подлежащих тестированию.
 - Определить необходимые ресурсы для проведения работ по тестированию.
