Update отчет о тестировании.md

--- a/отчет о тестировании.md
+++ b/отчет о тестировании.md
@@ -42,7 +42,7 @@
 Обычные 4
 Тривиальные 1
 ## Ошибки и замечания
-При тестировании бэкенда возникла ошибка:
+- При тестировании бэкенда возникла ошибка:
 > sneakers-backend@1.0.0 dev
 > nodemon -L app.js
 /nodemon] 3.1.4
@@ -64,7 +64,7 @@ ReferenceError: userSchema is not defined
     at Module._compile (node:internal/modules/cjs/loader:1198:14)
     at Object.Module._extensions..js (node:internal/modules/cjs/loader:1252:10)
 [nodemon] app crashed
-Ошибка ReferenceError: userSchema is not defined указывает на то, что переменная userSchema не определена в файле /app/models/users.js. 
+- Ошибка ReferenceError: userSchema is not defined указывает на то, что переменная userSchema не определена в файле /app/models/users.js. 
 Это препятствует запуску бэкенда и, соответственно, тестированию функций, зависящих от него.
 ## Выводы и рекомендации
 На основании проделанной работы и анализе текущего состояния сайта, делаю вывод, что на данный момент он не готово к релизу, блокирующие баи практически во всех разделах. Необходимо исправить код в модели пользователей, удостоверившись, что переменная userSchema правильно объявлена и импортирована. Рекомендую провести еще как минимум 1 цикл разработки до релиза, исправить баги, протестировать их исправление, включая все пропущенные тесты, провести регрессионное тестирование, провести анализ состояния сайта, его готовность к релизу. 
