Update отчет о тестировании.md

--- a/отчет о тестировании.md
+++ b/отчет о тестировании.md
@@ -1,6 +1,6 @@
 # Отчет о тестировании сайта “Магазин кроссовок “Sneakers”.
 - Дата: 29.08.2024 г.
- - Автор: Елена Яценко
+- Автор: Елена Яценко
 - Проект: “Магазин кроссовок “Sneakers” (это современная онлайн-платформа, посвященная продаже кроссовок и спортивной обуви. Помимо покупки обуви на сайте реализована система фильтров, позволяющая находить кроссовки по бреду, есть возможность почитать о трендах и новинках, оставить свой отзыв)
 - Версия: 1.0.0
 - Развертывание: Docker
@@ -67,7 +67,6 @@ ReferenceError: userSchema is not defined
 - Ошибка ReferenceError: userSchema is not defined указывает на то, что переменная userSchema не определена в файле /app/models/users.js. 
 Это препятствует запуску бэкенда и, соответственно, тестированию функций, зависящих от него.
 ## Выводы и рекомендации
-На основании проделанной работы и анализе текущего состояния сайта, делаю вывод, что на данный момент он не готово к релизу, блокирующие баи практически во всех разделах. Необходимо исправить код в модели пользователей, удостоверившись, что переменная userSchema правильно объявлена и импортирована. Рекомендую провести еще как минимум 1 цикл разработки до релиза, исправить баги, протестировать их исправление, включая все пропущенные тесты, провести регрессионное тестирование, провести анализ состояния сайта, его готовность к релизу. 
-Приложения
+На основании проделанной работы и анализе текущего состояния сайта, делаю вывод, что на данный момент он не готово к релизу, блокирующие баги практически во всех разделах. Необходимо исправить код в модели пользователей, удостоверившись, что переменная userSchema правильно объявлена и импортирована. Рекомендую провести еще как минимум 1 цикл разработки до релиза, исправить баги, протестировать их исправление, включая все пропущенные тесты, провести регрессионное тестирование, провести анализ состояния сайта, его готовность к релизу.
 ## Вся указанная тестовая документация находится по ссылке:
 https://docs.google.com/spreadsheets/d/10G1gNSuE2nN7KfAqPRvvtB0kaXllPsX4-bOSumZfzCc/edit?gid=2109121731#gid=2109121731
