Update отчет о тестировании.md

--- a/отчет о тестировании.md
+++ b/отчет о тестировании.md
@@ -20,8 +20,8 @@
 - проведение тестирования сайта (тестирование: функциональности, пользовательского интерфейса, юзабилити, исследовательское, производительности, безопасности, SEO, Юридической информации);
 - документирование ошибок и замечаний (баг-репорты);
 - составление рекомендаций.
-## Выделение классов эквивалентности и граничных значений 
-- техника тест дизайна позволяет сократить количество тестов, выбирая только одну или несколько проверок из разных классов. Это помогает избежать избыточного тестирования, сохраняя при этом достаточное покрытие.
+## Техники тест-дизайна использованные при тестировании:
+- Выделение классов эквивалентности и граничных значений - техника тест дизайна позволяет сократить количество тестов, выбирая только одну или несколько проверок из разных классов. Это помогает избежать избыточного тестирования, сохраняя при этом достаточное покрытие.
 - Диаграмма переходов состояний - техника тест дизайна, представляющая собой все возможные комбинации начальных и конечных состояний, включая действительные и недействительные переходы, инициирующие события, защитные условия и результирующие действия.
 - Таблица принятия решения - техника тест-дизайна, используемая для тестирования разных комбинаций условий в требованиях. Данные комбинации условий представляют графически, в виде таблицы, с целью полного покрытия тестами всех требований.
 ## Тестовая документация
@@ -67,6 +67,6 @@ ReferenceError: userSchema is not defined
 - Ошибка ReferenceError: userSchema is not defined указывает на то, что переменная userSchema не определена в файле /app/models/users.js. 
 Это препятствует запуску бэкенда и, соответственно, тестированию функций, зависящих от него.
 ## Выводы и рекомендации
-На основании проделанной работы и анализе текущего состояния сайта, делаю вывод, что на данный момент он не готово к релизу, блокирующие баги практически во всех разделах. Необходимо исправить код в модели пользователей, удостоверившись, что переменная userSchema правильно объявлена и импортирована. Рекомендую провести еще как минимум 1 цикл разработки до релиза, исправить баги, протестировать их исправление, включая все пропущенные тесты, провести регрессионное тестирование, провести анализ состояния сайта, его готовность к релизу.
+На основании проделанной работы и анализа текущего состояния сайта, делаю вывод, что на данный момент он не готово к релизу, блокирующие баги практически во всех разделах. Необходимо исправить код в модели пользователей, удостоверившись, что переменная userSchema правильно объявлена и импортирована. Рекомендую провести еще как минимум 1 цикл разработки до релиза, исправить баги, протестировать их исправление, включая все пропущенные тесты, провести регрессионное тестирование, провести анализ состояния сайта, его готовность к релизу.
 ## Вся указанная тестовая документация находится по ссылке:
 https://docs.google.com/spreadsheets/d/10G1gNSuE2nN7KfAqPRvvtB0kaXllPsX4-bOSumZfzCc/edit?gid=2109121731#gid=2109121731
